--- a/views/about.ejs
+++ b/views/about.ejs
@@ -95,12 +95,12 @@
             <td>20191777</td>
           </tr>
           <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
+            <th scope="row">Trần Văn Lợi</th>
+            <td>20191929</td>
           </tr>
           <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
+            <th scope="row">Trần Văn Hải</th>
+            <td>20191818</td>
           </tr>
         </tbody>
       </table>
